# agentforce-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  agentforce_client.py  pyproject.toml  server.py  test_agentforce_client.py  test_server.py
.claude/: settings.local.json
